--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
                     url: "games/crazycattle3d/crazycattle3d.html"   // This is the local path to your game
                 },
                 { 
-                    id: "game-one", 
-                    title: "Game One", 
-                    thumbnail: "games/game-one/thumbnail.png", 
-                    url: "games/game-one/index.html" 
+                    id: "webfarm", 
+                    title: "Web Farm", 
+                    thumbnail: "games/webfarm/thumbnail.png", 
+                    url: "games/webfarm/webfarm.html" 
                 },
                 { 
                     id: "game-two", 
