--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
             // ========= YOUR GAME DATABASE =========
             const gamesData = [
                 { id: "crazycattle3d", title: "Crazy Cattle 3D", thumbnail: "games/crazycattle3d/thumbnail.png", url: "games/crazycattle3d/crazycattle3d.html" },
-                { id: "webfarm", title: "Web Farm", thumbnail: "games/webfarm/thumbnail.png", url: "games/webfarm/webfarm.html" }
+                { id: "webfarm", title: "Web Farm", thumbnail: "games/webfarm/thumbnail.png", url: "games/webfarm/webfarm.html" },
+                { id: "slope", title: "Slope", thumbnail: "games/slope/thumbnail.png", url: "games/slope/slope.html" }
             ];
 
             // --- Get references to all HTML elements ---
