Add 'Baldi's Basics Classic Remastered' to games list

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                 { id: "crazycattle3d", title: "Crazy Cattle 3D", thumbnail: "games/crazycattle3d/thumbnail.png", url: "games/crazycattle3d/crazycattle3d.html" },
                 { id: "webfarm", title: "Web Farm", thumbnail: "games/webfarm/thumbnail.png", url: "games/webfarm/webfarm.html" },
                 { id: "obby99willlose", title: "Obby 99 Will Lose", thumbnail: "games/obby99willlose/thumbnail.png", url: "games/obby99willlose/obby99willlose.html" },
-                { id: "slope", title: "Slope", thumbnail: "games/slope/thumbnail.png", url: "games/slope/slope.html" }
+                { id: "slope", title: "Slope", thumbnail: "games/slope/thumbnail.png", url: "games/slope/slope.html" },
+                { id: "baldisbasicsremastered", title: "Baldi's Basics Classic Remastered", thumbnail: "games/baldisbasicsremastered/thumbnail.png", url: "games/baldisbasicsremastered/baldisbasicsremastered.html" }
             ];
 
             const mainContent = document.getElementById('main-content');
